SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/File_Upload_Page_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>File Upload Page configuration.</description>
    <label>BT File Upload Page Configuration</label>
</CustomObject>