SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/Default_Allow_Download_by_Presigned_URL__c.field-meta.xml
<CustomField>
    <fullName>Default_Allow_Download_by_Presigned_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default value for &quot;Allow to Download by Presigned URL&quot; for new file.</description>
    <inlineHelpText>Default value for &quot;Allow to Download by Presigned URL&quot; for new file.</inlineHelpText>
    <label>Default Allow Download by Presigned URL</label>
    <type>Checkbox</type>
</CustomField>