SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/Default_Copy_Move__c.field-meta.xml
<CustomField>
    <fullName>Default_Copy_Move__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default allow copy &amp; move for new files.</description>
    <inlineHelpText>Default allow copy &amp; move for new files.</inlineHelpText>
    <label>Default copy &amp; move</label>
    <type>Checkbox</type>
</CustomField>