SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/Default_Grantees_for_Private_Files__c.field-meta.xml
<CustomField>
    <fullName>Default_Grantees_for_Private_Files__c</fullName>
    <description>Default grantees for private files.</description>
    <inlineHelpText>Default grantees for private files.</inlineHelpText>
    <label>Default Grantees for Private Files</label>
    <length>255</length>
    <type>Text</type>
</CustomField>