SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/Default_Presigned_URL_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Presigned_URL_Frequency__c</fullName>
    <description>Default presigned URL generation frequency for new files.</description>
    <inlineHelpText>Default presigned URL generation frequency for new files.</inlineHelpText>
    <label>Default Presigned URL Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>