SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/Default_Public_on_Amazon__c.field-meta.xml
<CustomField>
    <fullName>Default_Public_on_Amazon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default value for public on amazon for new file.</description>
    <inlineHelpText>Default value for public on amazon for new file.</inlineHelpText>
    <label>Default Public on Amazon</label>
    <type>Checkbox</type>
</CustomField>