SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/Default_Salesforce_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Salesforce_Access_Type__c</fullName>
    <description>Default access type for new file.</description>
    <inlineHelpText>Default access type for new file.</inlineHelpText>
    <label>Default Salesforce Access Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>