SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/Default_Track_Download_History__c.field-meta.xml
<CustomField>
    <fullName>Default_Track_Download_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default track download history for new files.</description>
    <inlineHelpText>Default track download history for new files.</inlineHelpText>
    <label>Default Track Download History</label>
    <type>Checkbox</type>
</CustomField>