SubBt/force-app/main/default/objects/File_Upload_Page_Configuration__c/fields/File_Administrative_Fields__c.field-meta.xml
<CustomField>
    <fullName>File_Administrative_Fields__c</fullName>
    <description>Administrative fields need to be displayed in file upload page.</description>
    <inlineHelpText>Administrative fields need to be displayed in file upload page.</inlineHelpText>
    <label>File Administrative Fields</label>
    <type>TextArea</type>
</CustomField>